Finished menu need to make buttons look the same everywhere